main: Fixed subscription and publication saving in files. Changed the format from .json to .txt . Also optimized some imports.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -14,10 +14,10 @@ numberOfThreads=4
 probability.avgField=0.1
 
 # Output file paths for subscriptions and publications
-output.subscriptions.single=output/subscriptions_single_thread.json
-output.subscriptions.multi=output/subscriptions_multi_thread.json
-output.publications.single=output/publications_single_thread.json
-output.publications.multi=output/publications_multi_thread.json
+output.subscriptions.single=output/subscriptions_single_thread.txt
+output.subscriptions.multi=output/subscriptions_multi_thread.txt
+output.publications.single=output/publications_single_thread.txt
+output.publications.multi=output/publications_multi_thread.txt
 
 # Field frequency percentages (default and specific overrides)
 default.fieldsFrequency=50.0
